--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ body {
 .divider {
   border: none;
   border-top: solid 1px rgb(209, 209, 209);
+  transition: all 1s;
 }
 
 .paragraph__spacing {
